# ems

./: .dockerignore  .gitignore  00_项目总览.md  01_需求与范围_PRD.md  02_关键决策记录_ADR.md  03_系统架构与模块边界.md  04_数据模型与存储设计.md  05_API契约与前端对接.md  06_开发环境与工作流_WSL2.md  07_项目执行任务.md  08_最小可运行骨架.md  09_完成进度.md  10_里程碑完成总结_M0-M5.md  ACCEPTANCE_REPORT.md  AGENTS.md  API_ALIGNMENT_REPORT.md  COMMERCIAL_MANUAL.md  Cargo.toml  EMS_JWT_SECRET.md  OPERATION_MANUAL.md  PROJECT_FLOW_DIAGRAMS.md  README copy.md  README.md  SKILL.md  docker-compose.yml
.cargo/: config.toml
apps/ems-api/: Cargo.toml  Dockerfile  USAGE.md
apps/ems-api/src/: ingest.rs  main.rs  routes.rs
apps/ems-api/src/handlers/: USAGE.md  audit.rs  auth.rs  commands.rs  devices.rs  gateways.rs  measurements.rs  metrics.rs  mod.rs  point_mappings.rs  points.rs  projects.rs  rbac.rs  realtime.rs
apps/ems-api/src/middleware/: auth.rs  mod.rs
apps/ems-api/src/utils/: mod.rs  response.rs  validation.rs
crates/capability/auth/: Cargo.toml  USAGE.md
crates/capability/auth/src/: jwt.rs  lib.rs  password.rs
crates/capability/auth/tests/: jwt.rs  password.rs  refresh_rotation.rs
crates/capability/config/: Cargo.toml  USAGE.md
crates/capability/config/src/: lib.rs
crates/capability/config/tests/: config.rs
crates/capability/control/: Cargo.toml  USAGE.md
crates/capability/control/src/: lib.rs
crates/capability/ingest/: Cargo.toml  USAGE.md
crates/capability/ingest/src/: lib.rs
crates/capability/normalize/: Cargo.toml  USAGE.md
crates/capability/normalize/src/: lib.rs
crates/capability/pipeline/: Cargo.toml  USAGE.md
crates/capability/pipeline/src/: lib.rs
crates/capability/protocol/: Cargo.toml
crates/capability/protocol/src/: error.rs  lib.rs  modbus_tcp.rs  tcp_client.rs  tcp_server.rs  types.rs
crates/capability/storage/: Cargo.toml  USAGE.md
crates/capability/storage/src/: connection.rs  error.rs  lib.rs  models.rs  online.rs  redis.rs  traits.rs  validation.rs
crates/capability/storage/src/in_memory/: audit.rs  command.rs  command_receipt.rs  device.rs  gateway.rs  measurement.rs  mod.rs  online.rs  point.rs  point_mapping.rs  project.rs  realtime.rs  user.rs
crates/capability/storage/src/postgres/: audit.rs  command.rs  command_receipt.rs  device.rs  gateway.rs  measurement.rs  mod.rs  point.rs  point_mapping.rs  project.rs  user.rs
crates/capability/storage/tests/: in_memory.rs  in_memory_assets.rs  measurements.rs  online.rs  project_scope.rs  realtime.rs
crates/capability/telemetry/: Cargo.toml  USAGE.md
crates/capability/telemetry/src/: lib.rs
crates/capability/telemetry/tests/: request_ids.rs
crates/core/api-contract/: Cargo.toml  USAGE.md
crates/core/api-contract/src/: lib.rs
crates/core/api-contract/tests/: contract.rs  response.rs
crates/core/domain/: Cargo.toml  USAGE.md
crates/core/domain/src/: data.rs  lib.rs  permissions.rs
crates/core/domain/tests/: context.rs
docker/mosquitto/: mosquitto.conf  passwords
migrations/: 001_init.sql  002_seed.sql  003_assets.sql  004_timescale.sql  005_control.sql  006_rbac.sql  007_auth_sessions.sql  008_building_hierarchy_protocol.sql
scripts/: control-receipt-simulate.sh  db-init.sh  device-emulator.sh  health-check.sh  mqtt-simulate.sh  mvp-acceptance.sh  rbac-acceptance.sh  stability-check.sh
