[workspace]
members = [
  "apps/ems-api",
  "crates/core/domain",
  "crates/core/api-contract",
  "crates/capability/auth",
  "crates/capability/storage",
  "crates/capability/telemetry",
  "crates/capability/config",
]
default-members = ["apps/ems-api"]
resolver = "2"

[workspace.dependencies]
async-trait = "0.1"
axum = "0.7"
dotenvy = "0.15"
jsonwebtoken = "9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio-rustls"] }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["request-id", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4"] }

api-contract = { path = "crates/core/api-contract" }
domain = { path = "crates/core/domain" }
ems-auth = { path = "crates/capability/auth" }
ems-config = { path = "crates/capability/config" }
ems-storage = { path = "crates/capability/storage" }
ems-telemetry = { path = "crates/capability/telemetry" }

[profile.dev]
debug = 1

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
