[package]
name = "ems-protocol"
version = "0.1.0"
edition = "2021"
description = "协议通信能力模块：Modbus TCP、TCP Server/Client"

[dependencies]
# Workspace 依赖
async-trait = { workspace = true }
tokio = { workspace = true, features = ["net", "io-util", "sync", "time"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

# Modbus TCP 协议支持
tokio-modbus = { version = "0.17", default-features = false, features = ["tcp"] }

# 内部依赖
domain = { path = "../../core/domain" }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
