[package]
name = "ems-storage"
version = "0.1.0"
edition = "2024"
rust-version = "1.92.0"
publish = false

[dependencies]
async-trait = { workspace = true }
domain = { workspace = true }
sqlx = { workspace = true }

[dev-dependencies]
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true }
domain = { workspace = true }
sqlx = { workspace = true }
